k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    project: cms-devops
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    project: cms-devops
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    project: cms-devops
